--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -1,133 +1,134 @@
 @charset "ISO-8859-1";
 
-body {
-    background-image: url("Signupback.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    
+body{
+  font-family: 'Google Sans','Noto Sans Myanmar UI',arial,sans-serif;
+}
+img{
+  max-width: 100px;
+  max-height: 50px;
+}
+.maindiv{
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  width: 350px;
+  min-height: 400px;
+  padding:3rem;
+  border-radius:0.5rem;
+  border:1px solid #e1e1e1;
+  text-align: center;
+}
+.maindiv .Fields{
+  display: inline-block;
+  height: 90px;
+  position: relative;
+}
+h1{
+  font-size:24px;
+  font-weight: 200px;
+}
+h3{
+  color:#202124;
+  font-size: 16px;
+  font-weight: 400;
+}
+input{
+  outline: none;
 }
 
-#shoppingLogo {
-    background-color: rgba(255, 255, 255, 0.3);
+#forget, #ca{
+    float: left;
+    color: #1a73e8;
+    font-weight: bolder;
+    text-decoration: none;
+}
+.Before-FS{
+  width:344px;
+  border: 1px solid #c2c2c2;
+  border-radius: 3px;
+  height: 28px;
+  font-size:16px;
+  margin: 10px 1px 0 1px;
+  padding: 13px 15px;
+  transition: 0.1s;
+  margin-top: 2px;
+}
+.Before-FS:focus{
+  border: 2px solid #1a73e8;
+  border-top:1px solid transparent;
+}
+.Fs-H{
+  opacity: 0;
+  transition:0.2s;
+}
+.Fieldset > h1{
+  font:1em normal;
+  margin:-5px 2.5px -8px;
+  position:relative;
+  top:-60px
+}
+.Fieldset > h1 > span {
+float: left;
+color:#1a73e8;
+font-family: 'Google Sans','Noto Sans Myanmar UI','arial','sans-serif';
+font-size: 13px;
 }
 
-.center {
+.Fieldset >h1::before{
+  border-top:2px solid #1a73e8;
+  content:' ';
+  float: left;
+  margin: 0.5em 2px 0 -1px;
+  width:0.75em
+
+}
+.Fieldset > h1::after{
+
+  border-top:2px solid #1a73e8;
+  content: ' ';
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: 70px;
-  }
-
-#Navigation {
-    margin: 10px auto;
-    font-size: large;
+    height:1.5em;
+    left:2px;
+    margin: 0 1px 0 0;
+    overflow: hidden;
+    position: relative;
+    top:0.5em;
+}
+.placeholder{
+  position: absolute;
+  left:20px;
+  top:19px;
+  color:#80868b;
+  font-size: 16px;
+  font-weight: 400;
+  pointer-events: none;
+  transition:0.4s
 }
 
-#Navigation a{
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
+input:focus ~ label.placeholder,
+input:valid ~ label.placeholder {
+  top:3px;
+  font-size: 10px;
+  opacity: 0;
 }
 
-#Navigation a:hover {
-    color: white;
-    text-shadow: 0 0 20px;
+input:focus + .Fs-H,input:valid + .Fs-H{
+opacity: 1;
+
 }
 
-#Home {
-    margin-left: 70px;
-}
+button{
+  float: right;
+  cursor: pointer;
+  border:1px solid transparent;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42;
+  color:white;
+  border-radius: 4px;
+  background-color: #1a73e8;
+  outline: none;
+  min-width: 88px;
 
-#right {
-    float: right;
-}
-
-#aboutUs {
-    margin-right: 10px;
-}
-
-
-#Register {
-    margin-left: 10px;
-}
-
-#Contact {
-    margin-left: 10px;
-    margin-right: 20px;
-}
-
-
-
-#h3 {
-    margin: 23.4px 100px;
-}
-
-#UserLogin {
-    
-    margin: 0px auto;
-    width: 280px;
-    margin-top: 100px;
-}
-
-#Username, #Password {
-    border-radius: 20px;
-    padding: 10px 10px;
-    outline: none;
-    margin: 0px auto;
-    width: 250px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.3);
-    font-size: 15px;
-}
-
-::placeholder {
-    font-weight: bolder;
-    font-size: 15px;
-    color: wheat;
-}
-
-#login {
-    padding: 5px 10px;
-    width: 100px;
-    margin: 10px 90px;
-    background-color: #038f83;
-    outline: none;
-}
-
-#login:hover {
-    transition: 0.2s;
-    transform: scale(1.03);
-}
-
-#forget {
-    margin: 0px 40px;
-    margin-left: 80px;
-}
-
-#forget a {
-    color: black;
-    font-weight: 700;
-}
-
-#newUser {
-    margin: 40px 40px;
-    margin-left: 60px;
-}
-
-#newUser span {
-    font-weight: bolder;
-    font-size: 20px;
-}
-
-#newUser a {
-    text-decoration: none;
-    color: white;
-}
-
-#newUser a:hover {
-    font-weight: bolder;
-    text-shadow: 0 0 20px ;
 }
