--- a/src/main/webapp/Register.css
+++ b/src/main/webapp/Register.css
@@ -1,125 +1,143 @@
 @charset "ISO-8859-1";
 
-body {
-    background-image: url(sign0.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+body{
+  margin: 0;
+  padding: 0;
+  background: #fff;
 }
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: 70px;
-  }
-
-#Navigation {
-    margin: 10px auto;
+form{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border: 1px solid #9c9c9c;
+  border-radius: 10px;
+  width: 435px;
+  padding: 25px;
+  background: #fff;
 }
-
-#Navigation a{
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
+.logo{
+  width: 100px;
+  padding: 5px 0;
+  margin: 0 0 0 -15px;
 }
-
-h3 {
-    margin-left: 50px;
-    font-family: 'Pacifico', cursive;
+.head{
+  padding-left: 10px;
 }
-
-h3:hover {
-    text-shadow: 0px 0px 10px #ff9900;
+.head h3{
+  margin: 0;
+  font-size: 23px;
+  font-family: jost;
+  position: relative;
+  letter-spacing: 1px;
 }
-
-h3 span {
-    margin-left: 75px;
-    font-family: 'Lobster', cursive;
+input{
+  outline: none;
+  border: 1px solid #9c9c9c;
+  border-radius: 5px;
+  padding: 0 10px;
+  height: 35px;
+  font-size: 15px;
 }
-
-#Home {
-    margin-left: 70px;
+input:focus{
+  border: 1.5px solid #1f52f9;
 }
-
-#right {
-    float: right;
+.name{
+  display: inline-block;
 }
-
-#aboutUs {
-    margin-right: 10px;
+input[type="text"]{
+  display: block;
+  margin: 30px 0 0 10px;
 }
-
-
-#Register {
-    margin-left: 10px;
+input[type="username"]{
+  display: block;
+  width: 390px;
+  margin: 10px 0 0 10px;
 }
-
-#Contact {
-    margin-left: 10px;
-    margin-right: 20px;
+.gmail{
+  position: relative;
+  display: block;
+  top: -47px;
+  left: 330px;
+  font-family:roboto;
+  color: #333;
+  font-size: 15px;
+  cursor: default;
 }
-
-
-#SignUp {
-    margin: 60px auto;
-    width: 340px;
-    height: 480px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 20px;
+.pass{
+  display: inline-block;
 }
-
-#SignUp:hover {
-    box-shadow: 0px 0px 25px 5px #00fff2;
-    transform: scale(1.01);
+.password{
+  display: block;
+  width: 140px;
+  margin: 0 5px 0 10px;
 }
-
-#username, #email, #password, #phone {
-    border-radius: 20px;
-    padding: 8px;
-    width: 60%;
-    margin-bottom: 20px;
-    outline: none;
-    margin-left: 50px;
-    border-color: white;
-    box-shadow: 0px 0px 8px #9b50d4;
+label{
+  position: relative;
+  font-family:roboto;
+  color: #555;
+  font-size: 15px;
+  pointer-events: none;
+  left: 20px;
+  top: -28px;
+  transition: .2s all;
 }
-
-button {
-    border-radius: 5px;
-    padding: 5px;
-    width: 40%;
-    margin-left: 90px;
-    margin-bottom: 30px;
-    border: 2px solid white;
-    background: #7F00FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    outline: none;
-    color: white;
+input:focus ~label,
+input:valid ~ label{
+  top: -49px;
+  left: 15px;
+  background: #fff;
+  padding: 0 5px;
+  font-size: 10px;
+  color: #1f52f9;
 }
-
-button:hover {
-    transform: scale(1.03);
+a{
+  position: relative;
+  font-family: roboto;
+  text-decoration: none;
+  display: block;
 }
-
-hr {
-    width: 225px;
-    margin-left: 55px;
+.line1{
+  font-size: 12px;
+  margin: -30px 0 0 15px;
 }
-
-span p {
-    font-size: 20px;
-    margin-left: 100px;
+.line2{
+  color: #1144ed;
+  font-size: 15px;
+  margin: 20px 0 20px 15px;
 }
-
-#Lodo {
-    margin-left: 80px;
+.line3{
+  font-size: 12px;
+  margin: -10px 0 0 15px;
+  width: 310px;
 }
-
-::placeholder{
-    font-weight: bolder;
+.line4{
+  font-size: 15px;
+  margin: 20px 8px;
+  color: #4971f6;
+  display: inline-block;
+  font-family: arial rounded mt;
+}
+input[type="submit"]{
+  background:  #4971f6;
+  color: #fff;
+  border: none;
+  padding:10px 30px;
+  border-radius: 5px;
+  margin:  40px 0 30px 180px;
+  cursor: pointer;
+  font-size: 15px;
+}
+input[type="submit"]:hover{
+  background: #254fdb;
+}
+.iconeye{
+  display: inline-block;
+}
+#eye{
+  display: block;
+  position: relative;
+  top: -18px;
+  width:27px;
+  cursor: pointer;
 }
