--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -1,134 +1,137 @@
 @charset "ISO-8859-1";
 
 body{
-  font-family: 'Google Sans','Noto Sans Myanmar UI',arial,sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #fff;
 }
-img{
-  max-width: 100px;
-  max-height: 50px;
-}
-.maindiv{
+form{
   position: absolute;
   top: 50%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%,-50%);
-  width: 350px;
-  min-height: 400px;
-  padding:3rem;
-  border-radius:0.5rem;
-  border:1px solid #e1e1e1;
-  text-align: center;
+  border: 1px solid #9c9c9c;
+  border-radius: 10px;
+  width: 435px;
+  padding: 25px;
+  background: #fff;
 }
-.maindiv .Fields{
-  display: inline-block;
-  height: 90px;
+.logo{
+  width: 100px;
+  padding: 5px 0;
+  margin: 0 0 0 -15px;
+}
+.head{
+  padding-left: 10px;
+}
+.head h3{
+  margin: 0;
+  font-size: 23px;
+  font-family: jost;
   position: relative;
-}
-h1{
-  font-size:24px;
-  font-weight: 200px;
-}
-h3{
-  color:#202124;
-  font-size: 16px;
-  font-weight: 400;
+  letter-spacing: 1px;
 }
 input{
   outline: none;
+  border: 1px solid #9c9c9c;
+  border-radius: 5px;
+  padding: 0 10px;
+  height: 35px;
+  font-size: 15px;
 }
-
-#forget, #ca{
-    float: left;
-    color: #1a73e8;
-    font-weight: bolder;
-    text-decoration: none;
+input:focus{
+  border: 1.5px solid #1f52f9;
 }
-.Before-FS{
-  width:344px;
-  border: 1px solid #c2c2c2;
-  border-radius: 3px;
-  height: 28px;
-  font-size:16px;
-  margin: 10px 1px 0 1px;
-  padding: 13px 15px;
-  transition: 0.1s;
-  margin-top: 2px;
+.name{
+  display: inline-block;
 }
-.Before-FS:focus{
-  border: 2px solid #1a73e8;
-  border-top:1px solid transparent;
+input[type="text"]{
+  display: block;
+  width: 360px;
+  margin: 30px 0 0 10px;
 }
-.Fs-H{
-  opacity: 0;
-  transition:0.2s;
+input[type="email"]{
+  display: block;
+  width: 390px;
+  margin: 10px 0 0 10px;
 }
-.Fieldset > h1{
-  font:1em normal;
-  margin:-5px 2.5px -8px;
-  position:relative;
-  top:-60px
+.pass{
+  display: inline-block;
 }
-.Fieldset > h1 > span {
-float: left;
-color:#1a73e8;
-font-family: 'Google Sans','Noto Sans Myanmar UI','arial','sans-serif';
-font-size: 13px;
+.password{
+  display: block;
+  width: 360px;
+  margin: 0 5px 0 10px;
 }
-
-.Fieldset >h1::before{
-  border-top:2px solid #1a73e8;
-  content:' ';
-  float: left;
-  margin: 0.5em 2px 0 -1px;
-  width:0.75em
-
-}
-.Fieldset > h1::after{
-
-  border-top:2px solid #1a73e8;
-  content: ' ';
-    display: block;
-    height:1.5em;
-    left:2px;
-    margin: 0 1px 0 0;
-    overflow: hidden;
-    position: relative;
-    top:0.5em;
-}
-.placeholder{
-  position: absolute;
-  left:20px;
-  top:19px;
-  color:#80868b;
-  font-size: 16px;
-  font-weight: 400;
+label{
+  position: relative;
+  font-family:roboto;
+  color: #555;
+  font-size: 15px;
   pointer-events: none;
-  transition:0.4s
+  left: 20px;
+  top: -28px;
+  transition: .2s all;
 }
-
-input:focus ~ label.placeholder,
-input:valid ~ label.placeholder {
-  top:3px;
+input:focus ~label,
+input:valid ~ label{
+  top: -49px;
+  left: 15px;
+  background: #fff;
+  padding: 0 5px;
   font-size: 10px;
-  opacity: 0;
+  color: #1f52f9;
 }
-
-input:focus + .Fs-H,input:valid + .Fs-H{
-opacity: 1;
-
+a{
+  position: relative;
+  font-family: roboto;
+  text-decoration: none;
+  margin-left: 10px;
+  color: #1a73e8;
+  font-weight: bolder;
 }
-
-button{
+input[type="submit"]{
+  background:  #4971f6;
+  color: #fff;
+  border: none;
+  padding:10px 30px;
+  border-radius: 5px;
   float: right;
   cursor: pointer;
-  border:1px solid transparent;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42;
-  color:white;
-  border-radius: 4px;
-  background-color: #1a73e8;
-  outline: none;
-  min-width: 88px;
+  font-size: 15px;
+}
+input[type="submit"]:hover{
+  background: #254fdb;
+}
+.iconeye{
+  display: inline-block;
+}
+#eye{
+  display: block;
+  position: relative;
+  top: -18px;
+  width:27px;
+  cursor: pointer;
+}
 
+.next{
+    background:  #4971f6;
+    color: #fff;
+    border: none;
+    padding:10px 30px;
+    border-radius: 5px;
+    float: right;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+#password{
+  margin-top: 10px;
+  display: none;
+}
+.hidden{
+  display: none;
+}
+.icon{
+ float: left;
 }
