--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -1,5 +1,3 @@
-@charset "ISO-8859-1";
-
 body{
   margin: 0;
   padding: 0;
@@ -44,7 +42,9 @@ input:focus{
 }
 .name{
   display: inline-block;
+ 
 }
+
 input[type="text"]{
   display: block;
   width: 360px;
@@ -54,6 +54,16 @@ input[type="email"]{
   display: block;
   width: 390px;
   margin: 10px 0 0 10px;
+}
+.gmail{
+  position: relative;
+  display: block;
+  top: -47px;
+  left: 330px;
+  font-family:roboto;
+  color: #333;
+  font-size: 15px;
+  cursor: default;
 }
 .pass{
   display: inline-block;
@@ -91,17 +101,24 @@ a{
   font-weight: bolder;
 }
 input[type="submit"]{
+  text-transform: uppercase;
+  font-size: large;
+  font-weight: bold;
   background:  #4971f6;
   color: #fff;
   border: none;
-  padding:10px 30px;
+  padding:10px 10px;
   border-radius: 5px;
   float: right;
   cursor: pointer;
   font-size: 15px;
+  transition: 0.6s all ease-in-out;
 }
 input[type="submit"]:hover{
-  background: #254fdb;
+  background: none;
+  border: 2px solid #f84242fb;
+  border-radius: 10px;
+  color: black;
 }
 .iconeye{
   display: inline-block;
@@ -118,11 +135,23 @@ input[type="submit"]:hover{
     background:  #4971f6;
     color: #fff;
     border: none;
+    text-transform: uppercase;
+    font-size: large;
+    font-weight: bold;
     padding:10px 30px;
     border-radius: 5px;
+    /* margin:  40px 0 30px 180px; */
     float: right;
     cursor: pointer;
     font-size: 15px;
+    transition: 0.3s all ease-in-out;
+}
+
+.next:hover{
+  border-radius: 25px;
+  background-color: coral;
+  border: 2px solid black;
+  color: white;
 }
 
 #password{
@@ -134,4 +163,33 @@ input[type="submit"]:hover{
 }
 .icon{
  float: left;
+ width: 52px;
+ height: 55px;
+}
+
+.animate_pass{
+  animation: slide_up 0.5s ease;
+  border: 2px salmon solid;
+}
+@keyframes slide_up {
+  0%{
+    transform:translateY(50px);
+  }
+  100%{
+    transform: translateY(0); 
+  }
+}
+
+.animate_sel{
+  animation: slide_left 0.5s ease;
+}
+
+
+@keyframes slide_left {
+  0%{
+    transform: translateX(100px);
+  }
+  100%{
+    transform: translateX(0);
+  }
 }
