--- a/src/main/webapp/Register.css
+++ b/src/main/webapp/Register.css
@@ -1,5 +1,3 @@
-@charset "ISO-8859-1";
-
 body{
   margin: 0;
   padding: 0;
@@ -49,10 +47,10 @@ input[type="text"]{
   display: block;
   margin: 30px 0 0 10px;
 }
-input[type="username"]{
+input[type="email"]{
   display: block;
   width: 390px;
-  margin: 10px 0 0 10px;
+  margin: 10px 0 0px 10px;
 }
 .gmail{
   position: relative;
@@ -69,8 +67,7 @@ input[type="username"]{
 }
 .password{
   display: block;
-  width: 140px;
-  margin: 0 5px 0 10px;
+  margin: 0 5px 5px 10px;
 }
 label{
   position: relative;
@@ -99,7 +96,7 @@ a{
 }
 .line1{
   font-size: 12px;
-  margin: -30px 0 0 15px;
+  margin: -10px 0 0 15px;
 }
 .line2{
   color: #1144ed;
@@ -140,4 +137,10 @@ input[type="submit"]:hover{
   top: -18px;
   width:27px;
   cursor: pointer;
+}
+
+.res{
+	margin: 15px;
+	padding: 0;
+  font-size: 15px;
 }
